--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,13 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+// Google Map
+
+html, body {
+  height: 100%; margin: 0; padding: 0;
+}
+
+#map {
+ height: 100%;
+}
